fixed a minor alignment issue that was bothering me

--- a/potlux/static/resources/css/custom.css
+++ b/potlux/static/resources/css/custom.css
@@ -749,3 +749,7 @@ svg.star-icon path {
 #welcomeUser a:hover {
 	text-decoration: underline;
 }
+
+.projectInfoTable td {
+	vertical-align: top;
+}
